code-toolbar component

--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -35,6 +35,8 @@
 </header>
 <main>
   <h2>Resources &amp; Tools</h2>
+  <nocode-code-toolbar></nocode-code-toolbar>
+
   <p>Thank you for using and showing some ♥ for Nx.</p>
   <div class="flex github-star-container">
     <a
