--- a/libs/ui/src/lib/file-name/file-name.component.html
+++ b/libs/ui/src/lib/file-name/file-name.component.html
@@ -8,6 +8,8 @@
     type="text"
     name="filename"
     id="filename"
-    class="px-1 py-1 text-xs border-gray-300"
+    class="px-1 py-1 text-xs border-gray-300  {{
+      danger ? 'text-red-600' : ''
+    }}"
   />
 </div>
