widgets lib combines ui and vendor libs

--- a/libs/ui/src/lib/code-toolbar/code-toolbar.component.html
+++ b/libs/ui/src/lib/code-toolbar/code-toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row items-center border border-gray-300 max-w-min">
+<div class="flex flex-row items-center max-w-min">
   <button
     *ngFor="let action of this.actions; index as i"
     (click)="onClick(action)"
