--- a/libs/widgets/src/lib/basic-code-editor/basic-code-editor.component.html
+++ b/libs/widgets/src/lib/basic-code-editor/basic-code-editor.component.html
@@ -1,20 +1,22 @@
 <div class="flex flex-col sm:w-full max-w-md">
   <div class="flex flex-row items-center justify-between">
     <code-toolbar
+      [toolbar]="toolbar"
       (action)="onAction($event)"
       class="mr-10 bg-gray-300"
     ></code-toolbar>
     <file-name
-      [danger]="!scriptIsSaved"
-      (filename)="onFilename($event)"
+      [filenameIN]="filename"
+      (filenameOUT)="onFilename($event)"
     ></file-name>
   </div>
   <codemirror
     [language]="'python'"
-    [save]="saveScript"
-    [new]="newScript"
-    (changed)="onScriptChanged()"
+    [save]="(action$ | async) === 'save'"
+    [new]="(action$ | async) === 'new'"
     (script)="onScript($event)"
+    (cleared)="onCleared()"
+    (changed)="onChanged()"
     class="border mt-1 sm:w-full max-w-md"
   ></codemirror>
 </div>
