--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -1,1 +1,3 @@
+<a (click)="login()">Login</a>
+<a (click)="logout()">Logout</a>
 <div class="px-10 py-10"><basic-code-editor></basic-code-editor></div>
