--- a/libs/ui/src/lib/alert/alert.component.html
+++ b/libs/ui/src/lib/alert/alert.component.html
@@ -1,15 +1,15 @@
-<div class="rounded-md bg-green-50 p-4">
+<div class="rounded-md {{ color.bg }} p-4">
   <div class="flex">
     <div class="flex-shrink-0">
       <svg-icon
         key="{{ iconKey() }}"
-        class="text-green-400"
-        size="lg"
+        class="{{ color.icon }}"
+        size="xxl"
       ></svg-icon>
     </div>
     <div class="ml-3">
-      <h3 class="text-sm font-medium text-green-800">{{ header }}</h3>
-      <div class="mt-2 text-sm text-green-700">
+      <h3 class="text-sm font-medium {{ color.bold }}">{{ header }}</h3>
+      <div class="mt-2 text-sm {{ color.txt }}">
         <p>
           {{ message }}
         </p>
@@ -21,16 +21,16 @@
           type="button"
           class="
             inline-flex
-            bg-green-50
+            {{ color.bg }}
             rounded-md
             p-1.5
-            text-green-500
-            hover:bg-green-100
+            {{ color.dismiss_txt }}
+            hover:{{ color.dismiss_hover }}
             focus:outline-none
             focus:ring-2
             focus:ring-offset-2
-            focus:ring-offset-green-50
-            focus:ring-green-600
+            focus:{{ color.dismiss_focus_ring_offset }}
+            focus:{{ color.dismiss_focus }}
           "
           (click)="onDismiss()"
         >
