--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -1,3 +1,4 @@
+<loading-overlay *ngIf="isLoading$ | async"></loading-overlay>
 <div>
   <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
   <div
@@ -712,6 +713,7 @@
           >
             <span class="sr-only">View notifications</span>
             <!-- Heroicon name: outline/bell -->
+            <!-- <svg-icon [key]="'bell'" [size]="'xl'"></svg-icon> -->
             <svg
               class="h-6 w-6"
               xmlns="http://www.w3.org/2000/svg"
@@ -729,6 +731,20 @@
             </svg>
           </button>
 
+          <div class="ml-3 relative" *ngIf="!(loggedIn$ | async)">
+            <a
+              class="
+                text-gray-600
+                hover:bg-gray-50 hover:text-gray-900
+                text-sm
+                font-medium
+                rounded-md
+                cursor-pointer
+              "
+              (click)="login()"
+              >Login</a
+            >
+          </div>
           <!-- Profile dropdown -->
           <div class="ml-3 relative" *ngIf="loggedIn$ | async">
             <div>
@@ -835,7 +851,6 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <!-- Replace with your content -->
 
-          <a (click)="login()">Login</a>
           <basic-code-editor></basic-code-editor>
 
           <!-- /End replace -->
