--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -731,7 +731,7 @@
             </svg>
           </button>
 
-          <div class="ml-3 relative" *ngIf="!(loggedIn$ | async)">
+          <div class="ml-3 relative" *ngIf="(loggedIn$ | async) === undefined">
             <a
               class="
                 text-gray-600
@@ -851,7 +851,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <!-- Replace with your content -->
 
-          <basic-code-editor></basic-code-editor>
+          <div *ngIf="(loggedIn$ | async) === false">
+            Welcome to Gnosys! Prepare to excel in programming!
+          </div>
+          <basic-code-editor *ngIf="loggedIn$ | async"></basic-code-editor>
 
           <!-- /End replace -->
         </div>
