initial user, commented reset stores etc

--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -731,7 +731,7 @@
             </svg>
           </button>
 
-          <div class="ml-3 relative" *ngIf="(loggedIn$ | async) === undefined">
+          <div class="ml-3 relative" *ngIf="(loggedIn$ | async) === false">
             <a
               class="
                 text-gray-600
