--- a/libs/ui/src/lib/alert/alert.component.html
+++ b/libs/ui/src/lib/alert/alert.component.html
@@ -15,7 +15,7 @@
         </p>
       </div>
     </div>
-    <div class="ml-auto pl-3">
+    <div class="ml-auto pl-3" *ngIf="!autodismiss">
       <div class="-mx-1.5 -my-1.5">
         <button
           type="button"
