--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -851,16 +851,13 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <alerts></alerts>
         </div>
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+        <!-- <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <h1 class="text-2xl font-semibold text-gray-900">Dashboard</h1>
-        </div>
+        </div> -->
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <!-- Replace with your content -->
 
-          <div *ngIf="(loggedIn$ | async) === false">
-            Welcome to Gnosys! Prepare to excel in programming!
-          </div>
-          <basic-code-editor *ngIf="loggedIn$ | async"></basic-code-editor>
+          <router-outlet></router-outlet>
 
           <!-- /End replace -->
         </div>
