logo component and svg size and textSize

--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -80,11 +80,12 @@
       </div>
 
       <div class="flex-shrink-0 flex items-center px-4">
-        <img
+        <!-- <img
           class="h-8 w-auto"
           src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg"
           alt="Workflow"
-        />
+        /> -->
+        <gnosys-logo class="h-8 w-auto"></gnosys-logo>
       </div>
       <div class="mt-5 flex-1 h-0 overflow-y-auto">
         <nav class="px-2 space-y-1">
@@ -353,11 +354,12 @@
       "
     >
       <div class="flex items-center flex-shrink-0 px-4">
-        <img
+        <!-- <img
           class="h-8 w-auto"
           src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg"
           alt="Workflow"
-        />
+        /> -->
+        <gnosys-logo class="h-8 w-auto"></gnosys-logo>
       </div>
       <div class="mt-5 flex-grow flex flex-col">
         <nav class="flex-1 px-2 pb-4 space-y-1">
@@ -860,6 +862,9 @@
           <router-outlet></router-outlet>
 
           <!-- /End replace -->
+        </div>
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+          <!-- <gnosys-logo></gnosys-logo> -->
         </div>
       </div>
     </main>
