--- a/apps/gnosys/src/app/landing/landing/landing.component.html
+++ b/apps/gnosys/src/app/landing/landing/landing.component.html
@@ -4,7 +4,7 @@
       <h2
         class="text-base font-semibold text-indigo-600 tracking-wide uppercase"
       >
-        <svg-icon [key]="'owl'" [size]="'xxl'"></svg-icon>
+        <svg-icon [key]="'owl'" [fontSize]="'100px'"></svg-icon>
       </h2>
       <p
         class="
@@ -16,7 +16,7 @@
           lg:text-6xl
         "
       >
-        Gnosys is power.
+        gnosys is power
       </p>
       <p class="max-w-xl mt-5 mx-auto text-xl text-gray-500">
         Prepare to excel in programming and modern technologies.
