--- a/libs/ui/src/lib/alert/alert.component.html
+++ b/libs/ui/src/lib/alert/alert.component.html
@@ -4,7 +4,7 @@
       <svg-icon
         key="{{ iconKey() }}"
         class="{{ color.icon }}"
-        size="xxl"
+        size="xl"
       ></svg-icon>
     </div>
     <div class="ml-3">
