--- a/apps/gnosys/src/app/user/sign-up/sign-up.component.html
+++ b/apps/gnosys/src/app/user/sign-up/sign-up.component.html
@@ -67,9 +67,9 @@
                 rounded-md
               "
             >
-              <option>Student</option>
-              <option>Teacher</option>
-              <option>Parent</option>
+              <option value="{{ student }}">Student</option>
+              <option value="{{ teacher }}">Teacher</option>
+              <option value="{{ parent }}">Parent</option>
             </select>
           </div>
         </div>
