--- a/apps/gnosys/src/app/user/user-landing/user-landing.component.html
+++ b/apps/gnosys/src/app/user/user-landing/user-landing.component.html
@@ -2,10 +2,10 @@
 <div class="bg-white shadow overflow-hidden sm:rounded-lg">
   <div class="px-4 py-5 sm:px-6">
     <h3 class="text-lg leading-6 font-medium text-gray-900">
-      Applicant Information
+      Gnosys User Profile
     </h3>
     <p class="mt-1 max-w-2xl text-sm text-gray-500">
-      Personal details and application.
+      Personal details and data.
     </p>
   </div>
   <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
@@ -13,7 +13,7 @@
       <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">Full name</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-          Margot Foster
+          {{ displayName$ | async }}
         </dd>
       </div>
       <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
@@ -25,7 +25,7 @@
       <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">Email address</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-          margotfoster@example.com
+          {{ email$ | async }}
         </dd>
       </div>
       <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
