--- a/libs/ui/src/lib/avatar-dropdown/avatar-dropdown.component.html
+++ b/libs/ui/src/lib/avatar-dropdown/avatar-dropdown.component.html
@@ -3,22 +3,23 @@
     <button
       type="button"
       class="
-        bg-gray-800
+        max-w-xs
+        bg-white
         flex
+        items-center
         text-sm
         rounded-full
         focus:outline-none
         focus:ring-2
         focus:ring-offset-2
-        focus:ring-offset-gray-800
-        focus:ring-white
+        focus:ring-indigo-500
       "
       id="user-menu-button"
       aria-expanded="false"
       aria-haspopup="true"
     >
       <span class="sr-only">Open user menu</span>
-      <avatar-circular [imageURL$]="imageURL$"></avatar-circular>
+      <avatar-circular [imageURL$]="imageURL$" [size]="8"></avatar-circular>
     </button>
   </div>
 
