--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -770,7 +770,7 @@
           <!-- Replace with your content -->
 
           <router-outlet></router-outlet>
-
+          {{ hello$ | async | json }}
           <!-- /End replace -->
         </div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
