--- a/apps/gnosys/src/app/app.component.html
+++ b/apps/gnosys/src/app/app.component.html
@@ -736,6 +736,19 @@
           <div class="ml-3 relative" *ngIf="(loggedIn$ | async) === false">
             <a
               class="
+                mr-3
+                text-gray-600
+                hover:bg-gray-50 hover:text-gray-900
+                text-sm
+                font-medium
+                rounded-md
+                cursor-pointer
+              "
+              routerLink="signup"
+              >Sign Up</a
+            >
+            <a
+              class="
                 text-gray-600
                 hover:bg-gray-50 hover:text-gray-900
                 text-sm
@@ -744,7 +757,7 @@
                 cursor-pointer
               "
               (click)="login()"
-              >Login</a
+              >Sign In</a
             >
           </div>
           <!-- Profile dropdown -->
@@ -770,7 +783,6 @@
           <!-- Replace with your content -->
 
           <router-outlet></router-outlet>
-          {{ hello$ | async | json }}
           <!-- /End replace -->
         </div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
