--- a/apps/gnosys/src/app/landing/landing/landing.component.html
+++ b/apps/gnosys/src/app/landing/landing/landing.component.html
@@ -21,6 +21,13 @@
       <p class="max-w-xl mt-5 mx-auto text-xl text-gray-500">
         Prepare to excel in programming and modern technologies.
       </p>
+      <p class="mt-5">
+        <tailwind-button
+          [iconKey]="'solid-mail'"
+          [buttonText]="'Sign Up'"
+          routerLink="signup"
+        ></tailwind-button>
+      </p>
     </div>
   </div>
 </div>
